footer - Updated the positon of google parter logo to add spacing and corrections

--- a/src/components/footer/footer.module.scss
+++ b/src/components/footer/footer.module.scss
@@ -138,7 +138,16 @@
   }
 }
 
+// .googlePartnerLogo {
+//   text-align: center;
+//   margin-bottom: 10px;
+// }
+// Position Google Partner logo absolutely within the footer
 .googlePartnerLogo {
-  text-align: center;
+  position: absolute;
+  top: 0;
+  right: 0;
+  padding-right: 20px;
+  z-index: 10;
   margin-bottom: 10px;
 }
